--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Juego de Memoria</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <h1>Juego de Memoria</h1>
+    <div id="game-board">
+        <!-- Las tarjetas se generarán aquí mediante JavaScript -->
+    </div>
+    <button id="reset-button">Reiniciar Juego</button>
+    <script src="index.js"></script>
+</body>
+</html>
